processed/gerrit/txt_full/38466.txt
Change:     38466
Subject:    LU-13510 doc: Document lnd_timeout in lnetctl man page
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/38466
Change-Id:  I30794ade993681a9874317fe825191fa7bb2fb97
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Chris Horn
Created:    2020-05-03 18:01:22.000000000
Updated:    2020-05-04 20:20:09.000000000
Patch Set:  3
Insertions: +15
Deletions:  -0
Comments:   0 (0 unresolved)

--- Commit Message ---
LU-13510 doc: Document lnd_timeout in lnetctl man page

Document lnd_timeout in lnetctl man page.

Test-Parameters: trivial
Signed-off-by: Chris Horn <hornc@cray.com>
Change-Id: I30794ade993681a9874317fe825191fa7bb2fb97

--- Review History ---

--- Message (Chris Horn, 2020-05-03 18:01:22.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2020-05-03 18:01:56.000000000) ---
Patch Set 1:

Cannot detect any functional changes in this patch
It is recommended to add "Test-Parameters: trivial" directive to patches that do not change any running code to ease the load on the testing subsystem

--- Message (wc-checkpatch, 2020-05-03 18:03:06.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-05-03 18:03:40.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lnet/lnet/router_proc.c:906:3: error: ‘INIT_CTL_NAME’ undeclared here (not in a function)
    INIT_CTL_NAME
    ^
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Chris Horn, 2020-05-03 18:04:57.000000000) ---
Uploaded patch set 2: Patch Set 1 was rebased.

--- Message (jenkins, 2020-05-03 18:04:58.000000000) ---
Patch Set 1:

No Builds Executed

--- Message (Lustre Gerrit Janitor, 2020-05-03 18:06:02.000000000) ---
Patch Set 2:

Cannot detect any functional changes in this patch
It is recommended to add "Test-Parameters: trivial" directive to patches that do not change any running code to ease the load on the testing subsystem

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-05-03 18:06:53.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2020-05-03 18:08:26.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Chris Horn, 2020-05-03 18:10:08.000000000) ---
Uploaded patch set 3: Commit message was updated.

--- Message (jenkins, 2020-05-03 18:10:09.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/13908/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/73856/ : ABORTED

--- Message (Lustre Gerrit Janitor, 2020-05-03 18:10:28.000000000) ---
Patch Set 3:

Cannot detect any functional changes in this patch

--- Message (wc-checkpatch, 2020-05-03 18:14:08.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-05-03 18:15:01.000000000) ---
Patch Set 3:

Code-wise looks good to me.

--- Message (Autotest, 2020-05-03 19:34:02.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-ldiskfs-dne session for build 73859.

--- Message (jenkins, 2020-05-03 19:40:09.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/13911/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/73859/ : SUCCESS

--- Message (Maloo, 2020-05-03 23:48:53.000000000) ---
Patch Set 3: Verified+1

Passed enforced test review-ldiskfs-dne on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-45vm1: https://testing.whamcloud.com/test_sessions/308695ad-eb1b-4573-a37d-aacc13960dc1 ran 5 tests.

--- Message (Chris Horn, 2020-05-04 20:20:09.000000000) ---
Abandoned
